add hello driver code Signed-off-by: kingyal <1902117660@qq.com>

--- a/drv/Makefile
+++ b/drv/Makefile
@@ -1,6 +1,8 @@
 
 all:
 	make -C drv_led/ leds_ko
+	make -C drv_test/ test_ko
 	
 clean:
 	make -C drv_led/ leds_ko_clean
+	make -C drv_test/ test_ko_clean
