--- a/sample/Makefile
+++ b/sample/Makefile
@@ -5,10 +5,16 @@ TARGET := sample
 
 SRC_DIR ?= $(shell pwd)
 
-INC_DIR :=  -I$(USR_DIR)/common/include/
+INC_DIR :=  -I$(SAMPLE_DIR)/common/include/			\
+			-I$(SAMPLE_DIR)/usr_led/include/		\
+			-I$(SAMPLE_DIR)/usr_test/include/		\
+			-I$(SAMPLE_DIR)/ring_buffer/include/
 
-SRCFILE := $(wildcard $(SRC_DIR)/*.c)
-SRCFILE += $(wildcard $(USR_DIR)/common/*.c)
+SRCFILE := $(wildcard $(SAMPLE_DIR)/main.c)
+SRCFILE += $(wildcard $(SAMPLE_DIR)/common/*.c)
+SRCFILE += $(wildcard $(SAMPLE_DIR)/usr_led/*.c)
+SRCFILE += $(wildcard $(SAMPLE_DIR)/usr_test/*.c)
+SRCFILE += $(wildcard $(SAMPLE_DIR)/ring_buffer/*.c)
 
 all:
 	arm-none-linux-gnueabi-gcc $(SRCFILE) $(INC_DIR) -o $(TARGET) -static
