add module_param，register chrdev region and alloc chrdev region Signed-off-by: kingyal <1902117660@qq.com>

--- a/drv/Makefile
+++ b/drv/Makefile
@@ -2,7 +2,13 @@
 all:
 	make -C drv_led/ leds_ko
 	make -C drv_test/ test_ko
+	make -C drv_module_param/ module_param_ko
+	make -C drv_request_cdev_num/ request_cdev_num_ko
+	make -C drv_request_ascdev_num/ request_ascdev_num_ko
 	
 clean:
-	make -C drv_led/ leds_ko_clean
-	make -C drv_test/ test_ko_clean
+	make -C drv_led/ leds_clean
+	make -C drv_test/ test_clean
+	make -C drv_module_param/ module_param_clean
+	make -C drv_request_cdev_num/ request_cdev_num_clean
+	make -C drv_request_ascdev_num/ request_ascdev_num_clean
