create char device node
Signed-off-by: kingyal <1902117660@qq.com>

--- a/drv/Makefile
+++ b/drv/Makefile
@@ -5,6 +5,8 @@ all:
 	make -C drv_module_param/ module_param_ko
 	make -C drv_request_cdev_num/ request_cdev_num_ko
 	make -C drv_request_ascdev_num/ request_ascdev_num_ko
+	make -C drv_register_cdev/ register_cdev_ko
+	make -C drv_create_cnode/ create_cnode_ko
 	
 clean:
 	make -C drv_led/ leds_clean
@@ -12,3 +14,5 @@ clean:
 	make -C drv_module_param/ module_param_clean
 	make -C drv_request_cdev_num/ request_cdev_num_clean
 	make -C drv_request_ascdev_num/ request_ascdev_num_clean
+	make -C drv_register_cdev/ register_cdev_clean
+	make -C drv_create_cnode/ create_cnode_ko
