--- a/sample/Makefile
+++ b/sample/Makefile
@@ -8,12 +8,16 @@ SRC_DIR ?= $(shell pwd)
 INC_DIR :=  -I$(SAMPLE_DIR)/common/include/			\
 			-I$(SAMPLE_DIR)/usr_led/include/		\
 			-I$(SAMPLE_DIR)/usr_test/include/		\
+			-I$(SAMPLE_DIR)/usr_cnode_fops/include/		\
+			-I$(SAMPLE_DIR)/usr_chr_driver_leds/include/		\
 			-I$(SAMPLE_DIR)/ring_buffer/include/
 
 SRCFILE := $(wildcard $(SAMPLE_DIR)/main.c)
 SRCFILE += $(wildcard $(SAMPLE_DIR)/common/*.c)
 SRCFILE += $(wildcard $(SAMPLE_DIR)/usr_led/*.c)
 SRCFILE += $(wildcard $(SAMPLE_DIR)/usr_test/*.c)
+SRCFILE += $(wildcard $(SAMPLE_DIR)/usr_cnode_fops/*.c)
+SRCFILE += $(wildcard $(SAMPLE_DIR)/usr_chr_driver_leds/*.c)
 SRCFILE += $(wildcard $(SAMPLE_DIR)/ring_buffer/*.c)
 
 all:
